Added color to social media when hovered

--- a/index.html
+++ b/index.html
@@ -288,13 +288,13 @@
                     </form>
     
                     <div class="footer__social">
-                        <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                        <a href="https://www.facebook.com/" target="_blank" class="footer__social-link facebook">
                             <i class="ri-facebook-fill"></i>
                         </a>
-                        <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                        <a href="https://www.instagram.com/" target="_blank" class="footer__social-link instagram">
                             <i class="ri-instagram-line"></i>
                         </a>
-                        <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                        <a href="https://twitter.com/" target="_blank" class="footer__social-link twitter">
                             <i class="ri-twitter-line"></i>
                         </a>
                     </div>
